JC - 'finalcode_forjohn' has final regression and clustering work for review

--- a/Thesis_Complete_Cases_Cleaning.Rmd
+++ b/Thesis_Complete_Cases_Cleaning.Rmd
@@ -225,6 +225,8 @@ d <- read.csv("/Users/natebender/Desktop/repo/RCthesisanalysis/dyn_national_2020
 
 d_accept <- d %>% 
   dplyr::filter(reject == 0)
+
+sessionInfo()
 ```
 
 ## Outline
