--- a/02.1_thesis_ch2_clustering.Rmd
+++ b/02.1_thesis_ch2_clustering.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r load packages and data, eval=T, echo=F, include=F}
-### Packages / libraries / load data & filter rejected out 
+### Packages / libraries / load data & filter rejected 
 library(tidyverse)
 library(dplyr)
 library(ggplot2)
